--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://use.typekit.net/lnf3shp.css" />
-    <link rel="icon" type="image/svg+xml" href="/duck.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/duck.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donne Su</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script src="/src/components/helper/ScrollPointerEvents.js" defer></script>
+    <script type="module" src="./src/main.jsx"></script>
+    <script
+      src="./src/components/helper/ScrollPointerEvents.jsx"
+      defer
+    ></script>
   </body>
 </html>
