--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <script
-      src="./src/components/helper/ScrollPointerEvents.jsx"
-      defer
-    ></script>
+    <script src="./src/components/helper/ScrollPointerEvents.js" defer></script>
   </body>
 </html>
