--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
-    <script src="./src/components/helper/ScrollPointerEvents.js" defer></script>
+    <script
+      type="module"
+      src="./src/components/helper/ScrollPointerEvents.js"
+      defer
+    ></script>
   </body>
 </html>
